src/test/ui/proc-macro/load-panic.stderr
error: proc-macro derive panicked
  --> $DIR/load-panic.rs:7:10
   |
LL | #[derive(A)]
   |          ^
   |
   = help: message: nope!

error: aborting due to previous error

